--- a/TestConsole/test.html
+++ b/TestConsole/test.html
@@ -9,6 +9,8 @@
 			width: 900px;
 			height: 600px;
 			display: flex;
+			flex-wrap: wrap;
+			align-content: flex-start;
 			background-color: #aaa;
 		}
 		#item1 {
